--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,18 @@
-appdirs==1.4.4
-apturl==0.5.2
+appdirs==1.4.3
 asgiref==3.2.10
-astroid==2.3.3
 autopep8==1.5.4
-bcrypt==3.1.7
-beautifulsoup4==4.9.1
-blinker==1.4
-Brlapi==0.7.0
-bs4==0.0.1
+CacheControl==0.12.6
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-chrome-gnome-shell==0.0.0
-Click==7.0
 colorama==0.4.3
-command-not-found==0.3
+contextlib2==0.6.0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptocompy==0.1.1.dev1
 cryptography==3.1.1
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
 defusedxml==0.7.0rc1
-distlib==0.3.1
+distlib==0.3.0
 distro==1.4.0
-distro-info===0.23ubuntu1
 Django==3.1.1
 django-braces==1.14.0
 django-cors-headers==3.5.0
@@ -33,94 +20,35 @@ django-oauth-toolkit==1.3.2
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 drf-social-oauth2==1.0.8
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.0.12
-future==0.18.2
-httplib2==0.14.0
+html5lib==1.0.1
 idna==2.10
-isort==4.3.21
+ipaddr==2.2.0
 itypes==1.2.0
 Jinja2==2.11.2
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
 lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
 MarkupSafe==1.1.1
-mccabe==0.6.1
-monotonic==1.5
-MouseInfo==0.1.3
-netifaces==0.10.4
-notify2==0.3.1
+msgpack==0.6.2
 oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pexpect==4.6.0
+packaging==20.3
+pep517==0.8.2
 Pillow==7.2.0
-pipenv==2020.8.13
-plyer==1.4.3
-protobuf==3.6.1
-psutil==5.5.1
-PyAutoGUI==0.9.50
-pycairo==1.16.2
+progress==1.5
 pycodestyle==2.6.0
 pycparser==2.20
-pycups==1.9.73
-PyGetWindow==0.0.8
-PyGObject==3.36.0
 PyJWT==1.7.1
-pylint==2.4.4
-pymacaroons==0.13.0
-PyMsgBox==1.0.8
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyperclip==1.8.0
-PyRect==0.1.4
-pyRFC3339==1.1
-PyScreeze==0.1.26
-python-apt==2.0.0+ubuntu0.20.4.1
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
+pyparsing==2.4.6
 python-decouple==3.3
 python3-openid==3.2.0
-python3-xlib==0.15
-PyTweening==1.0.3
+pytoml==0.1.21
 pytz==2020.1
-pywhatkit==2.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
 requests==2.24.0
 requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-selenium==3.141.0
-simplejson==3.16.0
+retrying==1.3.3
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==3.3.3
-soupsieve==2.0.1
 sqlparse==0.3.1
-systemd-python==234
 toml==0.10.1
-twilio==6.40.0
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
 uritemplate==3.0.1
 urllib3==1.25.10
-usb-creator==0.3.7
-virtualenv==20.0.31
-virtualenv-clone==0.5.4
-wadllib==1.3.3
-wikipedia==1.4.0
-wrapt==1.11.2
-xkit==0.0.0
+webencodings==0.5.1
