--- a/vita-django/requirements.txt
+++ b/vita-django/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.3
 asgiref==3.2.10
 autopep8==1.5.4
+boto3==1.16.1
+botocore==1.19.1
 CacheControl==0.12.6
 certifi==2020.6.20
 cffi==1.14.3
@@ -17,6 +19,7 @@ Django==3.1.1
 django-braces==1.14.0
 django-cors-headers==3.5.0
 django-oauth-toolkit==1.3.2
+django-storages==1.10.1
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
 drf-social-oauth2==1.0.8
@@ -25,6 +28,7 @@ idna==2.10
 ipaddr==2.2.0
 itypes==1.2.0
 Jinja2==2.11.2
+jmespath==0.10.0
 lockfile==0.12.2
 MarkupSafe==1.1.1
 msgpack==0.6.2
@@ -37,6 +41,7 @@ pycodestyle==2.6.0
 pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.6
+python-dateutil==2.8.1
 python-decouple==3.3
 python3-openid==3.2.0
 pytoml==0.1.21
@@ -44,6 +49,7 @@ pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 retrying==1.3.3
+s3transfer==0.3.3
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==3.3.3
