--- a/vitareact/package.json
+++ b/vitareact/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "screenfull": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
