--- a/vita-django/requirements.txt
+++ b/vita-django/requirements.txt
@@ -1,8 +1,8 @@
 appdirs==1.4.3
 asgiref==3.2.10
 autopep8==1.5.4
-boto3==1.16.1
-botocore==1.19.1
+boto3==1.14.53
+botocore==1.17.63
 CacheControl==0.12.6
 certifi==2020.6.20
 cffi==1.14.3
@@ -19,9 +19,10 @@ Django==3.1.1
 django-braces==1.14.0
 django-cors-headers==3.5.0
 django-oauth-toolkit==1.3.2
-django-storages==1.10.1
+django-storages==1.10
 djangorestframework==3.11.1
 djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
 drf-social-oauth2==1.0.8
 html5lib==1.0.1
 idna==2.10
