--- a/vitareact/package.json
+++ b/vitareact/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
