--- a/vitareact/package.json
+++ b/vitareact/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "braintree-web-drop-in-react": "^1.2.1",
+    "fusioncharts": "^3.15.3",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
+    "react-fusioncharts": "^3.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "screenfull": "^5.0.2"
