--- a/vitareact/package.json
+++ b/vitareact/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "apexcharts": "^3.22.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
     "braintree-web-drop-in-react": "^1.2.1",
     "fusioncharts": "^3.15.3",
     "react": "^16.14.0",
+    "react-apexcharts": "^1.3.7",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
